# ExpenseTrackerReplit

./: TAURI_SETUP.md  index.html  package-lock.json  package.json  replit.md  vite.config.ts  vite.config.ts.timestamp-1754504091794-44d3509363261.mjs
client/: index.html
client/public/: manifest.json  sw.js
client/src/: App.tsx  index.css  main.tsx
client/src/components/: BackupAndRestoreTab.tsx  BulkExpenseForm.tsx  CSVImportModal.tsx  CategoryCSVImportModal.tsx  CategoryManager.tsx  Dashboard.tsx  ExcelConversionTab.tsx  ExpenseCard.tsx  ExpenseForm.tsx  ExpensesList.tsx  FontSizeProvider.tsx  IconSelector.tsx  LoginPage.tsx  Navbar.tsx  Settings.tsx  UserCSVImportModal.tsx  UserManager.tsx  UserSelector.tsx  VersionDisplay.tsx  ui
client/src/components/dashboard/: CategoryBreakdown.tsx  (+2 more)
client/src/data/: defaultCredentials.ts  expenseTemplates.ts  mockCategories.ts  mockData.ts  mockExpenseGenerator.ts  mockUsers.ts
client/src/hooks/: useAuth.ts  useExpenseData.ts  useFontSize.ts  useIndexedDBStorage.ts  usePWADetection.ts
client/src/lib/: queryClient.ts
client/src/pages/: CategoriesPage.tsx  Dashboard.tsx  ExpensesList.tsx  ReportsPage.tsx  SettingsPage.tsx  UsersPage.tsx
client/src/types/: index.ts
client/src/utils/: categoryCsvUtils.ts  csvUtils.ts  excelParser.ts  fileBackup.ts  formatters.ts  indexedDBStorage.ts  installationCode.ts  useCaseConfig.ts  userCsvUtils.ts  version.ts
server/: routes.ts  storage.ts
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  temp.ppm
src-tauri/src/: main.rs
(+12 files in other folders)
